# backend-site

./: .env.default  .gitignore  Readme.md  bandit.yml  pyproject.toml
app/: main.py
app/routes/: api.py
app/routes/v1/: recruiter.py
app/src/config/: database.py  settings.py
app/src/routes/: api.py
app/src/schemas/: email.py
app/tests/: test_db.py  test_main.py  test_register.py
tests/: test_main.py
