[tool.poetry]
name = "escape-room"
version = "0.0.1"
description = "Exciting virtual escape room designed for programming enthusiasts and tech recruiters."
authors = ["Enrique Lazo Bello <enlabe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["extra=all"], version = "^0.110.0"}
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pysen = "^0.10.6"
isort = "^5.13.2"
flake8 = "^7.0.0"
black = "^24.3.0"
pylint = "^3.1.0"
autopep8 = "^2.0.4"
bandit = "^1.7.8"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100


[tool.flake8]
ignore = "E203, E266, E501, W503, F403, F401"
max-line-length = 100
max-complexity = 18
select = "B,C,E,F,W,T4,B9"
verbose = true

[tool.pytest.ini_options]
minversion = "8.1.1"
addopts = "--verbose -p no:warnings"

[tool.pysen]
version = "0.10.6"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 100
py_version = "py311"
isort_known_third_party = ["numpy"]
isort_known_first_party = ["pysen"]
mypy_ignore_packages = ["pysen.generated.*"]
mypy_path = ["stubs"]

[[tool.pysen.lint.mypy_targets]]
  paths = ["."]

[tool.pysen.lint.source]
  includes = ["."]
  include_globs = ["**/*.template"]
  excludes = ["third_party/"]
  exclude_globs = ["**/*_grpc.py"]

[tool.pysen.lint.mypy_modules."pysen.scripts"]
  preset = "entry"

[tool.pysen.lint.mypy_modules."numpy"]
  ignore_errors = true



[tool.pylint]
disable = "W,C,R,unreachable,duplicate-key,unnecessary-semicolon,global-variable-not-assigned,unused-variable,binary-op-exception,bad-format-string,anomalous-backslash-in-string,bad-open-mode"
output-format = "colorized"

[tool.autopep8]
max-line-length = 100
verbose = true

[tool.bandit]
recursive = true
configfile = "bandit.yaml"
exclude = "B101"



[tool.poetry.scripts]
testall = "black . && isort . && flake8 . && pysen run lint && pylint . && autopep8 --in-place --recursive . && bandit -r . && pytest"

